adding get job list by admin api
